--- a/opencodegames.ui
+++ b/opencodegames.ui
@@ -235,6 +235,19 @@
        <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
       </property>
      </widget>
+     <widget class="QWidget" name="NewsWidget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>5</x>
+        <y>135</y>
+        <width>330</width>
+        <height>237</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">#PlayCenterWidget{ background-color: #c0c0c0; }</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="PlayCenterWidget" native="true">
      <property name="enabled">
@@ -257,35 +270,8 @@
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">#PlayCenterWidget{ background-image: url(:/images/PlayCenterWidget.png); }
-#PlayScrollArea{ border: none; }</string>
+      <string notr="true">#PlayCenterWidget{ background-image: url(:/images/PlayCenterWidget.png); }</string>
      </property>
-     <widget class="QScrollArea" name="PlayScrollArea">
-      <property name="geometry">
-       <rect>
-        <x>7</x>
-        <y>7</y>
-        <width>326</width>
-        <height>366</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: #c0c0c0;</string>
-      </property>
-      <property name="widgetResizable">
-       <bool>true</bool>
-      </property>
-      <widget class="QWidget" name="PlayScrollAreaWidget">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>0</y>
-         <width>326</width>
-         <height>366</height>
-        </rect>
-       </property>
-      </widget>
-     </widget>
     </widget>
     <widget class="QWidget" name="SettingsCenterWidget" native="true">
      <property name="enabled">
@@ -917,7 +903,7 @@ Password:</string>
    <widget class="QLabel" name="R_LoginLabel">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>7</x>
       <y>75</y>
       <width>200</width>
       <height>15</height>
@@ -929,7 +915,7 @@ Password:</string>
      </font>
     </property>
     <property name="text">
-     <string>You have already an account?</string>
+     <string>Do you've already an account?</string>
     </property>
     <property name="textInteractionFlags">
      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
@@ -1204,7 +1190,7 @@ Password:</string>
    <widget class="QLabel" name="L_RegisterLabel">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>12</x>
       <y>75</y>
       <width>190</width>
       <height>15</height>
@@ -1216,7 +1202,10 @@ Password:</string>
      </font>
     </property>
     <property name="text">
-     <string>You don't have an account?</string>
+     <string>New to OpenCodeGames?</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
     <property name="textInteractionFlags">
      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
